# Django_SkyChimp_CW6

./: .env.sample  README.md  blog_data.json  group_data.json  pyproject.toml  users_data.json
blog/: admin.py  models.py  urls.py  views.py
blog/management/commands/: fill_blog.py
blog/migrations/: 0001_initial.py  0002_alter_blog_picture_alter_blog_published_date.py  0003_alter_blog_count_of_views_alter_blog_published_date.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_alter_mailingattempt_options_mailingclient.py  0002_remove_mailingsettings_clients_and_more.py  0003_alter_mailingattempt_status.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  mailingattempt_list.html  mailingsettings_confirm_delete.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_form.html  message_list.html  usersmailingsettings_list.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: cm.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_avatar_alter_user_email_and_more.py
users/templates/users/: ban.html  confirmation_error.html  confirmation_success.html  generate_and_send_password.html  login.html  password_reset_error.html  password_reset_success.html  register.html  user_form.html  user_list.html  (+1 more)
