[tool.poetry]
name = "django-skychimp-cw6"
version = "0.1.0"
description = ""
authors = ["Pvl"]
readme = "README.md"
packages = [{include = "django_skychimp_cw6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"
pytils = "^0.4.1"
ipython = "^8.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
