[tool.poetry]
name = "django-skychimp-cw6"
version = "0.1.0"
description = ""
authors = ["Pvl"]
readme = "README.md"
packages = [{include = "django_skychimp_cw6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pillow = "^10.0.0"
pytils = "^0.4.1"
ipython = "^8.14.0"
django-apscheduler = "^0.6.2"
redis = "^5.0.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
